[package]
name = "http_server_rs"
version = "1.0.0"
edition = "2021"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "net", "io-util", "fs", "macros", "sync"] }
thiserror = "1.0.31"
log = "0.4.17"
env_logger = "0.9.0"
lazy_static = "1.4.0"
anyhow = "1.0.58"
