[package]
name = "map_reduce"
version = "1.0.0"
edition = "2021"
authors = ["CS 162 Staff <cs162@eecs.berkeley.edu>"]

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
futures-core = "0.3.21"
futures-util = "0.3.21"
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }
tokio-stream = "0.1.9"
tokio-util = "0.7.3"

async-stream = "0.3.3"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.9.0"
bincode = "1.3.3"
futures = "0.3.21"
bytes = "1.2.0"

clap = { version = "3.2.14", features = ["derive"] }
anyhow = "1.0.58"
thiserror = "1.0.31"
fnv = "1.0.7"
itertools = "0.10.3"
tempfile = "3.3.0"

uuid = { version = "1.1.2", features = ["v4"] }
lazy_static = "1.4.0"
rand_chacha =  { version = "0.3.1", optional = true }

[build-dependencies]
tonic-build = "0.7.2"

[features]
default = []
# Enabled when code is compiled on the autograder
autograder = ["dep:rand_chacha"]

[[bin]]
name = "mr-coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "mr-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "mr-client"
path = "src/bin/client.rs"

[[bin]]
name = "mr-autograder"
path = "src/bin/autograder.rs"
